original width and height fix
git-svn-id: https://plugins.svn.wordpress.org/simple-image-grabber/trunk@163677 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Simple Image Grabber WordPress plugin | Version 1.0.1</title>
+<title>Simple Image Grabber WordPress plugin | Version 1.0.2</title>
 <style type="text/css">
 code {
 	background: #ddd;
@@ -17,7 +17,7 @@ h1 {
 
 <body>
 <h1>Simple Image Grabber</h1>
-Version 1.0.1<br />
+Version 1.0.2<br />
 WordPress plugin<br />
 <br />
 <strong>== Installation ==</strong><br />
@@ -65,6 +65,11 @@ would display all images from a post with their original width and height, a cla
 <br />
 <br />
 <strong>== Change Log ==</strong><br />
+<br />
+1.0.2 (2009-10-15)
+<ul>
+<li>Added original width and height to img tag if neither is set</li>
+</ul>
 <br />
 1.0.1 (2009-03-16)
 <ul>
